--- a/src/main/webapp/stylesheets/login.css
+++ b/src/main/webapp/stylesheets/login.css
@@ -1,14 +1,14 @@
 @charset "ISO-8859-1";
 
 body {
-  background-color: #CCCCCC;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: #CCCCCC ;
 }
 
 .container{
   display: flex;
   background-color: #FFFFFF;
-  width: 750px;
+  width: 650px;
   margin-top: 150px;
   margin-left: auto;
   margin-right: auto;
@@ -22,8 +22,7 @@ body {
   border-bottom-left-radius: 10px;
   width: 350px;
 }
-
-.regbox {
+.logbox {
   padding: 15px 20px 0px 20px;
 }
 
@@ -33,20 +32,20 @@ body {
 }
 
 .form input{
-  width: 150px;
-  height: 20px;
-  margin-right: 15px;
+  width: 220px;
+  height: 25px;
+  margin-right: 30px;
   padding: 10px;
   border-radius: 10px;
   text-align: left;
-  margin-top: 5px;
+  margin-top: 10px;
   margin-bottom: 10px;
   outline: none;
   border: 1px solid black;
 }
 
-.register-button {
-  background-color: green; 
+.login-button {
+  background-color: green; /* Green */
   border: none;
   color: white;
   padding: 13px 32px;
