--- a/src/main/webapp/stylesheets/home.css
+++ b/src/main/webapp/stylesheets/home.css
@@ -4,9 +4,6 @@
   display: flex;
   justify-content: center;
   min-height: 70vh;
-  background:url(/images/razerviper.jpg) no-repeat;
-  background-size: cover;
-  background-position: center;
   padding: 20px;
   text-align: center;
 }
@@ -169,3 +166,47 @@
 /*product*/
 
 
+
+.footer{
+  margin-top: 50px;
+  width: 100%;
+  padding: 50px 100px;
+  background: #333;
+  color: #efefef;
+  display: flex;
+}
+
+.footer div{
+  text-align: center;
+}
+
+.column2{
+  flex-grow: 2;
+}
+
+.footer div h3{
+  font-weight: 300;
+  margin-bottom: 10px;
+  letter-spacing: 1px;
+}
+
+.newsletter input{
+  width: 400px;
+  height: 45px;
+  border-radius: 4px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 40px;
+  outline: none;
+  border: none;
+}
+
+.newsletter button{
+  background: transparent;
+  border: 2px solid #fff;
+  color: #fff;
+  border-radius: 30px;
+  padding: 10px 30px;
+  font-size: 15px;
+  cursor: pointer;
+}
